# mccl

./: .gitattributes  .gitignore  LICENSE  Makefile  Makefile.am  README.md  build.sh  configure.ac  shell.nix
.github/workflows/: cpp-ci.yml
contrib/: update.sh
doc/: algorithms.md  biblio.md  goals.md  isd_api_design.md  lowlevel.md  matrix_design.md  pseudocodes_sieving.txt  steps.md  todo-list.md
m4/: ax_m4ri_flags.m4
mccl/algorithm/: LB.hpp  decoding.cpp  decoding.hpp  dumer.hpp  isdgeneric.cpp  isdgeneric.hpp  lee_brickell.cpp  lee_brickell.hpp  mmt.cpp  mmt.hpp  prange.cpp  prange.hpp  sieving.cpp  sieving.hpp  stern_dumer.cpp  stern_dumer.hpp
mccl/config/: config.h  config.hpp  utils.hpp
mccl/contrib/: json.hpp  memory_usage.hpp  program_options.hpp  string_algo.hpp
mccl/core/: birthday.hpp  collection.hpp  matrix.hpp  matrix2.hpp  matrix_algorithms.hpp  matrix_base.hpp  matrix_detail.hpp  matrix_detail.inl  matrix_echelon.hpp  matrix_isdform.hpp  matrix_m4ri.cpp  matrix_m4ri.hpp  matrix_old.hpp  matrix_ops.cpp  matrix_ops.hpp  matrix_ops.inl  matrix_permute.hpp  matrix_storage.hpp  random.hpp  vector.hpp
mccl/core/wip/: matrix_echelon.hpp  matrix_partialmul.hpp
mccl/tools/: aligned_vector.hpp  bitfield.hpp  challenges.py  enumerate.hpp  generator.cpp  generator.hpp  hash_primes.cpp  hash_primes.hpp  parser.cpp  parser.hpp  statistics.hpp  unordered_multimap.cpp  unordered_multimap.hpp  utils.hpp
src/: isdsolver.cpp  isdsolver2.cpp
tests/: Makefile  test_collection.cpp  test_compile.cpp  test_cuda.cu  test_dumer.cpp  test_hash_primes.cpp  test_m4ri.cpp  test_marc  test_marc.cpp  test_matrix.cpp  test_mmt.cpp  test_parser.cpp  test_permute.cpp  test_prange.cpp  test_sieving.cpp  test_unordered_multimap.cpp  test_utils.hpp
tests/data/: Goppa_1101.txt  Goppa_197.txt  SD_100_0  SD_40_0  SD_50_0  SD_60_0  SD_70_0  SD_80_0  SD_90_0
tools/: SD_check.py  probability.py  success_proba.py  syndrome_generate.py  update_contrib.sh  update_m4.sh
vs2022/: isdsolver.sln  isdsolver.vcxproj  isdsolver.vcxproj.filters  libmccl.vcxproj  libmccl.vcxproj.filters
